--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,78 @@
     font-display: swap;
   } /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
   
- 
+  main {
+    display: block;
+  }
+  h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+  }
+  hr {
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
+  pre {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  a {
+    background-color: transparent;
+  }
+  abbr[title] {
+    border-bottom: none;
+    text-decoration: underline;
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
+  }
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  code,
+  kbd,
+  samp {
+    font-family: monospace, monospace;
+    font-size: 1em;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  img {
+    border-style: none;
+  }
+  button,
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+  }
+  button,
+  input {
+    overflow: visible;
+  }
+  button,
+  select {
+    text-transform: none;
+  }
   [type="button"],
   [type="reset"],
   [type="submit"],
@@ -94,7 +165,24 @@
   [hidden] {
     display: none;
   }
-
+  html {
+    scrollbar-width: thin;
+    font-family: Matter, sans-serif;
+    font-size: 2.66vw;
+    text-align: left;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  @media (min-width: 768px), (orientation: landscape) {
+    html {
+      font-size: 0.625vw;
+    }
+  }
+  @media (min-width: 1920px) {
+    html {
+      font-size: 12px;
+    }
+  }
 
 
   :after,
