--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,12 +912,12 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #121212;
+    background: #ffffff;
   }
   .cw-loader_overlay-box-craftwaves {
     padding: 0 1.5rem;
-    font-size: 4.2rem;
-    line-height: 90%;
+    font-size: 3.2rem;
+    line-height: 100%;
     letter-spacing: -0.03em;
     text-transform: inherit;
   }
@@ -930,12 +930,12 @@
   @media (min-width: 768px) {
     .cw-loader_overlay-box-craftwaves {
       padding: 0 10rem;
-      font-size: 17.2rem;
+      font-size: 11.2rem;
     }
   }
   .cw-loader_overlay-word-craftwaves {
     overflow: hidden;
-    color: #e0fd60;
+    color: #6a28b8;
   }
   .cw-loader_overlay-word-craftwaves.-v1 {
     transform: translateX(17%);
@@ -957,6 +957,7 @@
     animation: cb-fx-blink backwards 1s steps(1) infinite;
   }
   .cw-loader_overlay-percent-craftwaves {
+    color: #8031bf;
     display: inline-block;
     float: right;
     overflow: hidden;
