--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -935,7 +935,7 @@
   }
   .cw-loader_overlay-word-craftwaves {
     overflow: hidden;
-    color: #6a28b8;
+    color: #4c00ff;
   }
   .cw-loader_overlay-word-craftwaves.-v1 {
     transform: translateX(17%);
