--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,7 +912,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #ffffff;
+    background: #26213C;
   }
   .cw-loader_overlay-box-craftwaves {
     padding: 0 1.5rem;
@@ -935,7 +935,7 @@
   }
   .cw-loader_overlay-word-craftwaves {
     overflow: hidden;
-    color: #4c00ff;
+    color: #C8BCFB;
   }
   .cw-loader_overlay-word-craftwaves.-v1 {
     transform: translateX(17%);
@@ -957,7 +957,7 @@
     animation: cb-fx-blink backwards 1s steps(1) infinite;
   }
   .cw-loader_overlay-percent-craftwaves {
-    color: #757575;
+    color: #C8BCFB;
     display: inline-block;
     float: right;
     overflow: hidden;
