--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,7 +912,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #26213C;
+    background: #140d23;
   }
   .cw-loader_overlay-box-craftwaves {
     padding: 0 1.5rem;
